--- a/notebooks/prep/100_load_&_prep_FIFA18_dataset.ipynb
+++ b/notebooks/prep/100_load_&_prep_FIFA18_dataset.ipynb
@@ -9,7 +9,7 @@
     "## Purpose\n",
     "In this notebook we load in our FIFA complete dataset and perform any necessary cleaning. \n",
     "## Datasets\n",
-    "* _Input_: complete.csv00\n",
+    "* _Input_: complete.csv\n",
     "* _Output_: FIFA18.csv"
    ]
   },
@@ -634,7 +634,7 @@
    "metadata": {},
    "source": [
     "#### Spliting player names into First Initial and Surname.\n",
-    "Repeated four times in each case dealing with players with double and triple barrel names.\n",
+    "Repeated four times in each case dealing with players with single, normal double and triple barrel names.  \n",
     "EG: Kevin De Bryne is now K.Bryne"
    ]
   },
