--- a/notebooks/prep/230_load_&_prep_Fantasy1415.ipynb
+++ b/notebooks/prep/230_load_&_prep_Fantasy1415.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 230_____load_____&_prep_Fantasy1415  \n",
+    "## Purpose In this notebook we load in our FIFA complete dataset and perform any necessary cleaning.  \n",
+    "## Datasets \n",
+    "* _Input_: N/A\n",
+    "* _Output_: SEA1415.csv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
@@ -11,6 +22,15 @@
     "import os.path\n",
     "import numpy as np\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reading in all player information from the Top 5 Leagues from statsbunker.com\n",
+    "* Each league has its own unqique ID used when reading the table.  \n",
+    "* Using pd.read_html these tables can be read in with ease."
    ]
   },
   {
@@ -29,6 +49,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using pd.concat to merge each league together.  \n",
+    "* Resetting index.  \n",
+    "* Drop old index and column 'More' which contains no information."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
@@ -38,226 +67,7 @@
    "source": [
     "SEA1415 = [BPL1415,BUN1415,LAL1415,SEI1415,FRA1415]\n",
     "SEA1415 = pd.concat(SEA1415)\n",
-    "SEA1415 = SEA1415.reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>Players</th>\n",
-       "      <th>Points</th>\n",
-       "      <th>Clubs</th>\n",
-       "      <th>Position</th>\n",
-       "      <th>Start</th>\n",
-       "      <th>Goals</th>\n",
-       "      <th>A</th>\n",
-       "      <th>CS</th>\n",
-       "      <th>CS part</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Red</th>\n",
-       "      <th>Sub</th>\n",
-       "      <th>CO</th>\n",
-       "      <th>Off</th>\n",
-       "      <th>Pen SV</th>\n",
-       "      <th>Pen M</th>\n",
-       "      <th>Goals conceded</th>\n",
-       "      <th>Conceded 1+</th>\n",
-       "      <th>OG</th>\n",
-       "      <th>More</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Sergio Aguero</td>\n",
-       "      <td>211</td>\n",
-       "      <td>MCFC</td>\n",
-       "      <td>Forward</td>\n",
-       "      <td>30</td>\n",
-       "      <td>26</td>\n",
-       "      <td>8</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>12</td>\n",
-       "      <td>-</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>0</td>\n",
-       "      <td>More</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Harry Kane</td>\n",
-       "      <td>170</td>\n",
-       "      <td>SPURS</td>\n",
-       "      <td>Forward</td>\n",
-       "      <td>28</td>\n",
-       "      <td>21</td>\n",
-       "      <td>4</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>-</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>1</td>\n",
-       "      <td>More</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Eden Hazard</td>\n",
-       "      <td>169</td>\n",
-       "      <td>CHEL</td>\n",
-       "      <td>Midfielder</td>\n",
-       "      <td>38</td>\n",
-       "      <td>14</td>\n",
-       "      <td>9</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>-</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>0</td>\n",
-       "      <td>More</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Alexis Sanchez</td>\n",
-       "      <td>167</td>\n",
-       "      <td>ARSL</td>\n",
-       "      <td>Forward</td>\n",
-       "      <td>34</td>\n",
-       "      <td>16</td>\n",
-       "      <td>8</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "      <td>-</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>0</td>\n",
-       "      <td>More</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Charlie Austin</td>\n",
-       "      <td>166</td>\n",
-       "      <td>QPR</td>\n",
-       "      <td>Forward</td>\n",
-       "      <td>35</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>-</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>0</td>\n",
-       "      <td>More</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   index         Players  Points  Clubs    Position  Start  Goals  A CS  \\\n",
-       "0      0   Sergio Aguero     211   MCFC     Forward     30     26  8  -   \n",
-       "1      1      Harry Kane     170  SPURS     Forward     28     21  4  -   \n",
-       "2      2     Eden Hazard     169   CHEL  Midfielder     38     14  9  -   \n",
-       "3      3  Alexis Sanchez     167   ARSL     Forward     34     16  8  -   \n",
-       "4      4  Charlie Austin     166    QPR     Forward     35     18  5  -   \n",
-       "\n",
-       "  CS part  ...   Red  Sub  CO  Off  Pen SV Pen M  Goals conceded Conceded 1+  \\\n",
-       "0       -  ...     0    3   3   12       -     1               -           -   \n",
-       "1       -  ...     0    8   6    6       -     1               -           -   \n",
-       "2       -  ...     0    0   0   12       -     1               -           -   \n",
-       "3       -  ...     0    2   1   12       -     1               -           -   \n",
-       "4       -  ...     0    0   0    3       -     2               -           -   \n",
-       "\n",
-       "  OG  More  \n",
-       "0  0  More  \n",
-       "1  1  More  \n",
-       "2  0  More  \n",
-       "3  0  More  \n",
-       "4  0  More  \n",
-       "\n",
-       "[5 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "SEA1415.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "SEA1415 = SEA1415.reset_index()\n",
     "SEA1415.drop(SEA1415.columns[[0,20]], axis=1, inplace=True)"
    ]
   },
@@ -445,7 +255,17 @@
     }
    ],
    "source": [
-    "SEA1415.head()"
+    "SEA1415.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating new columns Apps and Form\n",
+    "* Apps is the total number of appearances a player makes (Starts plus being subbed on)\n",
+    "* Form is the total number of points divided by the number of appearances.\n",
+    "* All null values in Form filled in as 0"
    ]
   },
   {
@@ -456,28 +276,8 @@
    },
    "outputs": [],
    "source": [
-    "SEA1415['Apps'] = SEA1415['Start'] + SEA1415['CO']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "SEA1415['Form'] = SEA1415['Points']/SEA1415['Apps']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "SEA1415['Apps'] = SEA1415['Start'] + SEA1415['CO']\n",
+    "SEA1415['Form'] = SEA1415['Points']/SEA1415['Apps']\n",
     "SEA1415.loc[SEA1415['Form'].isnull(),'Form'] = 0"
    ]
   },
@@ -519,7 +319,15 @@
     }
    ],
    "source": [
-    "SEA1415.isnull().sum()"
+    "SEA1415.Form.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Replacing all Hyphen values with 0\n",
+    "* In this dataset hyphen represented no data so these were replaced with 0"
    ]
   },
   {
@@ -532,6 +340,14 @@
    "source": [
     "DashColumns = ['Goals','A','CS','CS part','Yellow','Red','Sub','CO','Off','Pen SV','Pen M','Goals conceded','Conceded 1+','OG',]\n",
     "SEA1415[DashColumns] = SEA1415[DashColumns].replace('-' ,'0')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checking dataframe data types\n",
+    "* Changed the columns CS, CS part, Pen SV, Goals conceded and Conceded 1+ from type object to int"
    ]
   },
   {
@@ -592,6 +408,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Spliting player names into First Initial and Surname.\n",
+    "Repeating process from FIFA18 notebook in preperation for joining.  \n",
+    "Each case deals with players with single, normal double and triple barrel names.  \n",
+    "EG: Marco Alonso is now M.Alonso"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
@@ -614,6 +440,13 @@
     "SEA1415.loc[SEA1415['Players'].str.split().str.len() == 4, 'FirstInitial'] = SEA1415['Players'].astype(str).str[0]\n",
     "SEA1415.loc[SEA1415['Players'].str.split().str.len() == 4, 'Firstname'] = SEA1415['Players'].str.split().str[0]\n",
     "SEA1415.loc[SEA1415['Players'].str.split().str.len() == 4, 'Surname'] = SEA1415['Players'].str.split().str[-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleaned dataframe now finished"
    ]
   },
   {
@@ -2552,7 +2385,14 @@
     }
    ],
    "source": [
-    "SEA1415.set_index(['Surname','FirstInitial'])"
+    "SEA1415.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Saving to csv file in data/prep"
    ]
   },
   {
