--- a/notebooks/prep/200_load_&_prep_Fantasy1718.ipynb
+++ b/notebooks/prep/200_load_&_prep_Fantasy1718.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# 200_____load_____&_prep_Fantasy1718  \n",
-    "## Purpose In this notebook we load in our FIFA complete dataset and perform any necessary cleaning.  \n",
+    "## Purpose In this notebook we load in our Fantasty dataset and perform any necessary cleaning.  \n",
     "## Datasets \n",
     "* _Input_: N/A\n",
     "* _Output_: SEA1718.csv"
