--- a/notebooks/prep/220_load_&_prep_Fantasy1516.ipynb
+++ b/notebooks/prep/220_load_&_prep_Fantasy1516.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# 220_____load_____&_prep_Fantasy1516  \n",
-    "## Purpose In this notebook we load in our FIFA complete dataset and perform any necessary cleaning.  \n",
+    "## Purpose In this notebook we load in our Fantasty dataset and perform any necessary cleaning.  \n",
     "## Datasets \n",
     "* _Input_: N/A\n",
     "* _Output_: SEA1516.csv"
