--- a/notebooks/prep/210_load_&_prep_Fantasy1617.ipynb
+++ b/notebooks/prep/210_load_&_prep_Fantasy1617.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# 210_____load_____&_prep_Fantasy1617  \n",
-    "## Purpose In this notebook we load in our Fantasty dataset and perform any necessary cleaning.  \n",
+    "## Purpose \n",
+    "In this notebook we load in our Fantasty dataset and perform any necessary cleaning.  \n",
     "## Datasets \n",
     "* _Input_: N/A\n",
     "* _Output_: SEA1617.csv"
