--- a/notebooks/prep/230_load_&_prep_Fantasy1415.ipynb
+++ b/notebooks/prep/230_load_&_prep_Fantasy1415.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# 230_____load_____&_prep_Fantasy1415  \n",
-    "## Purpose In this notebook we load in our Fantasty dataset and perform any necessary cleaning.  \n",
+    "## Purpose \n",
+    "In this notebook we load in our Fantasty dataset and perform any necessary cleaning.  \n",
     "## Datasets \n",
     "* _Input_: N/A\n",
     "* _Output_: SEA1415.csv"
