--- a/notebooks/prep/240_load_&_prep_Fantasy1314.ipynb
+++ b/notebooks/prep/240_load_&_prep_Fantasy1314.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# 240_____load_____&_prep_Fantasy1314\n",
-    "## Purpose In this notebook we load in our our Fantasty dataset and perform any necessary cleaning.  \n",
+    "## Purpose \n",
+    "In this notebook we load in our our Fantasty dataset and perform any necessary cleaning.  \n",
     "## Datasets \n",
     "* _Input_: N/A\n",
     "* _Output_: SEA1314.csv"
