--- a/notebooks/prep/250_load_&_prep_Fantasy1213.ipynb
+++ b/notebooks/prep/250_load_&_prep_Fantasy1213.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# 250_____load_____&_prep_Fantasy1213  \n",
-    "## Purpose In this notebook we read in our Fantasty dataset and perform any necessary cleaning.  \n",
+    "## Purpose \n",
+    "In this notebook we read in our Fantasty dataset and perform any necessary cleaning.  \n",
     "## Datasets \n",
     "* _Input_: N/A\n",
     "* _Output_: SEA1213.csv"
