--- a/notebooks/prep/420_prep_RQ3_Dataframes.ipynb
+++ b/notebooks/prep/420_prep_RQ3_Dataframes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 140,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 141,
    "metadata": {
     "collapsed": true
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 142,
    "metadata": {
     "collapsed": true
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 143,
    "metadata": {
     "collapsed": true
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 144,
    "metadata": {
     "collapsed": true
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -1928,7 +1928,7 @@
        "[3922 rows x 88 columns]"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1939,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 146,
    "metadata": {
     "collapsed": true
    },
@@ -1950,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 147,
    "metadata": {
     "collapsed": true
    },
@@ -1961,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 148,
    "metadata": {
     "collapsed": true
    },
@@ -1972,7 +1972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 149,
    "metadata": {
     "collapsed": true
    },
@@ -1983,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 150,
    "metadata": {
     "collapsed": true
    },
@@ -1994,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 151,
    "metadata": {
     "collapsed": true
    },
@@ -2005,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 152,
    "metadata": {
     "collapsed": true
    },
@@ -2016,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 153,
    "metadata": {
     "collapsed": true
    },
@@ -2027,7 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 154,
    "metadata": {
     "collapsed": true
    },
@@ -2038,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 155,
    "metadata": {
     "collapsed": true
    },
@@ -2049,7 +2049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 156,
    "metadata": {
     "collapsed": true
    },
@@ -2060,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 157,
    "metadata": {
     "collapsed": true
    },
@@ -2071,7 +2071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 158,
    "metadata": {
     "collapsed": true
    },
@@ -2082,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 159,
    "metadata": {
     "collapsed": true
    },
@@ -2093,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 160,
    "metadata": {
     "collapsed": true
    },
@@ -2104,10 +2104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 161,
+   "metadata": {},
    "outputs": [],
    "source": [
     "RQ3['Attacking Attributes'] = (RQ3['crossing']+RQ3['finishing']+RQ3['heading_accuracy']+RQ3['short_passing']+RQ3['volleys'])/5"
@@ -2115,7 +2113,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 162,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "RQ3['Attacking Attributes'] = RQ3['Attacking Attributes'].round(0).apply(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
    "metadata": {
     "collapsed": true
    },
@@ -2126,13 +2135,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 164,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "RQ3['Defending Attributes'] = RQ3['Defending Attributes'].round(0).apply(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "RQ3['Goalkeeping Attributes'] = (RQ3['gk_diving']+RQ3['gk_handling']+RQ3['gk_kicking']+RQ3['gk_positioning']+RQ3['gk_reflexes'])/5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "RQ3['Goalkeeping Attributes'] = RQ3['Goalkeeping Attributes'].round(0).apply(int)"
    ]
   },
   {
@@ -2144,7 +2175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 167,
    "metadata": {
     "collapsed": true
    },
@@ -2162,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 168,
    "metadata": {
     "collapsed": true
    },
@@ -2173,7 +2204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -2287,7 +2318,7 @@
        " 'Goalkeeping Attributes']"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2305,7 +2336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 170,
    "metadata": {
     "collapsed": true
    },
@@ -2316,7 +2347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 171,
    "metadata": {
     "collapsed": true
    },
@@ -2327,7 +2358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 172,
    "metadata": {
     "collapsed": true
    },
@@ -2345,7 +2376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 173,
    "metadata": {
     "collapsed": true
    },
@@ -2356,7 +2387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 174,
    "metadata": {
     "collapsed": true
    },
@@ -2367,7 +2398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 175,
    "metadata": {
     "collapsed": true
    },
@@ -2385,7 +2416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 176,
    "metadata": {
     "collapsed": true
    },
@@ -2396,7 +2427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 177,
    "metadata": {
     "collapsed": true
    },
@@ -2407,7 +2438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 178,
    "metadata": {
     "collapsed": true
    },
@@ -2425,19 +2456,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 185,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "RQ3_4 = RQ3[['Players','club','league','overall','age','Position','def','marking','standing_tackle','sliding_tackle','work_rate_def','Total Apps','Total Cards','Average Clean Sheets/Game']]"
+    "RQ3_4 = RQ3[['Players','club','league','overall','age','Position','Defending Attributes','def','marking','standing_tackle','sliding_tackle','work_rate_def','Total Apps','Total Cards','Average Clean Sheets/Game']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
-   "metadata": {},
+   "execution_count": 186,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "RQ3_4 = RQ3_4[RQ3_4['Position']=='Defender']"
@@ -2445,8 +2478,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
-   "metadata": {},
+   "execution_count": 187,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "RQ3_4.to_csv('../../data/analysis/RQ3_4.csv')"
@@ -2461,7 +2496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 188,
    "metadata": {
     "collapsed": true
    },
@@ -2472,7 +2507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 189,
    "metadata": {
     "collapsed": true
    },
@@ -2483,7 +2518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 190,
    "metadata": {
     "collapsed": true
    },
@@ -2507,6 +2542,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
