--- a/notebooks/analysis/700_RQ3_Analysis.ipynb
+++ b/notebooks/analysis/700_RQ3_Analysis.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Accuracy of Attributes"
+    "# 700_RQ1_Analysis_3\n",
+    "## Purpose\n",
+    "Initial analysis of our Reseach Question 3\n",
+    "\n",
+    "## Datasets\n",
+    "Input: RQ3_1.csv\n",
+    "       RQ3_2.csv\n",
+    "       RQ3_3.csv\n",
+    "       RQ3_4.csv\n",
+    "       RQ3_5.csv\n",
+    "Output: N/A"
    ]
   },
   {
@@ -33,16 +43,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Read in our RQ3_1 dataset and dropping irrelevant column and row."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 310,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-16c12b88c100>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mRQ3_1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../../data/analysis/RQ3_1.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mRQ3_1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRQ3_1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Unnamed: 0'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mRQ3_1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRQ3_1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "RQ3_1 = pd.read_csv(('../../data/analysis/RQ3_1.csv'))\n",
     "RQ3_1 = RQ3_1.drop('Unnamed: 0', 1)\n",
     "RQ3_1 = RQ3_1.iloc[1:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Sample of RQ3_1 Dataset"
    ]
   },
   {
@@ -269,9 +303,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Find correlation between each attribute and its relevant aspect of the game"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 313,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "shooting_corr = shooting.corr(RQ3_1['Average Goals/Game']).round(5).astype(str) \n",
@@ -354,9 +397,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Graph the relationship between each attribute and its relevant aspect of the game"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 315,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "shooting = shooting.to_frame().reset_index()\n",
@@ -471,6 +523,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Read in our RQ3_2 dataset and dropping irrelevant column and row."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 317,
    "metadata": {
@@ -481,6 +540,13 @@
     "RQ3_2 = pd.read_csv(('../../data/analysis/RQ3_2.csv'))\n",
     "RQ3_2 = RQ3_2.drop('Unnamed: 0', 1)\n",
     "RQ3_2 = RQ3_2.iloc[1:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Sample of RQ3_2 Dataset"
    ]
   },
   {
@@ -670,6 +736,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Find correlation between each attribute and its relevant aspect of the game"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 320,
    "metadata": {
@@ -757,9 +830,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Graph the relationship between each attribute and its relevant aspect of the game"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 322,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "passing = passing.to_frame().reset_index()\n",
@@ -874,6 +956,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Read in our RQ3_3 dataset and dropping irrelevant column and row."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 324,
    "metadata": {
@@ -884,6 +973,13 @@
     "RQ3_3 = pd.read_csv(('../../data/analysis/RQ3_3.csv'))\n",
     "RQ3_3 = RQ3_3.drop('Unnamed: 0', 1)\n",
     "RQ3_3 = RQ3_3.iloc[1:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Sample of our RQ3_3 dataset"
    ]
   },
   {
@@ -1079,6 +1175,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Find correlation between each attribute and its relevant aspect of the game"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 327,
    "metadata": {
@@ -1162,9 +1265,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Graph the relationship between each attribute and its relevant aspect of the game"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 329,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gk_diving = gk_diving.to_frame().reset_index()\n",
@@ -1271,6 +1383,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Read in our RQ3_4 dataset and dropping irrelevant column and row."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 331,
    "metadata": {
@@ -1281,6 +1400,13 @@
     "RQ3_4 = pd.read_csv(('../../data/analysis/RQ3_4.csv'))\n",
     "RQ3_4 = RQ3_4.drop('Unnamed: 0', 1)\n",
     "RQ3_4 = RQ3_4.iloc[1:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Sample of the dataframe"
    ]
   },
   {
@@ -1450,7 +1576,9 @@
   {
    "cell_type": "code",
    "execution_count": 333,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "defending = RQ3_4.groupby(['def']).mean()['Average Clean Sheets/Game']\n",
@@ -1460,9 +1588,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Find correlation between each attribute and its relevant aspect of the game"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 334,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "defending_corr = defending.corr(RQ3_4['Average Clean Sheets/Game']).round(5).astype(str)\n",
@@ -1531,6 +1668,13 @@
     "def_attributes.set_value('Average Clean Sheets/Game','marking',marking_corr)\n",
     "def_attributes.set_value('Average Clean Sheets/Game','standing_tackle',standing_tackle_corr)\n",
     "def_attributes.set_value('Average Clean Sheets/Game','sliding_tackle',sliding_tackle_corr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "z"
    ]
   },
   {
@@ -1626,6 +1770,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Read in our RQ3_5 dataset and dropping irrelevant column and row."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1639,9 +1790,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Sample of the dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "RQ3_5.head(5)"
@@ -1650,25 +1810,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "aggression = RQ3_5.groupby(['aggression']).mean()['Average Cards/Game']"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Find correlation between each attribute and its relevant aspect of the game"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "aggression.corr(RQ3_5['Average Cards/Game']).round(5).astype(str)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Graph the relationship between each attribute and its relevant aspect of the game"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "aggression = aggression.to_frame().reset_index()"
@@ -1677,7 +1857,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "axis_size=14\n",
@@ -1689,6 +1871,16 @@
     "ax0.set_ylabel('Average Cards/Game',size=axis_size)\n",
     "ax0.set_xlabel('Average Cards/Game',size=axis_size)\n",
     "aggression.plot(ax=ax0,x='aggression',y='Average Cards/Game',kind='scatter',color='r')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Comment of Analysis:\n",
+    "The weak correlations dont tell us a whole lot, perhaps if we had more precise real-life data, we would be able to examine the strength of these attributes better. "
    ]
   },
   {
