--- a/notebooks/analysis/600_RQ2_Analysis_1.ipynb
+++ b/notebooks/analysis/600_RQ2_Analysis_1.ipynb
@@ -17,9 +17,9 @@
    "metadata": {},
    "source": [
     "# Homegrown vs Foreign\n",
-    "### Do homegrown players generally perform the best in their respective leagues or are they inferior to the foreign players? \n",
+    "### Do homegrown players generally perform the best in their respective leagues or are they inferior to their foreign counterparts?\n",
     "### Are their any reoccuring trends?\n",
-    "## General Analysis:\n"
+    "## General Analysis:"
    ]
   },
   {
