--- a/notebooks/analysis/620_RQ2_Analysis_3.ipynb
+++ b/notebooks/analysis/620_RQ2_Analysis_3.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "source": [
     "# Homegrown vs Foreign\n",
-    "### Do homegrown players generally perform the best in their respective leagues or are they inferior to the foreign players?\n",
+    "### Do homegrown players generally perform the best in their respective leagues or are they inferior to their foreign counterparts? \n",
     "### Can we spot any trends in the nationalities of players playing in leagues?\n",
     "## Heat Map Analysis:"
    ]
