--- a/notebooks/analysis/610_RQ2_Analysis_2.ipynb
+++ b/notebooks/analysis/610_RQ2_Analysis_2.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "source": [
     "# Homegrown vs Foreign\n",
-    "### Do homegrown players generally perform the best in their respective leagues or are they inferior to the foreign players?\n",
+    "### Do homegrown players generally perform the best in their respective leagues or are they inferior to their foreign counterparts? \n",
     "### Are the results reflected in FIFA's ratings?\n",
     "## Player Stat Analysis:"
    ]
