--- a/notebooks/prep/000_Run_All_Notebooks .ipynb
+++ b/notebooks/prep/000_Run_All_Notebooks .ipynb
@@ -22,7 +22,8 @@
     "%run 340_Join_FIFA_Fantasy1314.ipynb\n",
     "%run 350_Join_FIFA_Fantasy1213.ipynb\n",
     "%run 400_prep_RQ1_Dataframe.ipynb\n",
-    "%run 420_prep_RQ3_Dataframe.ipynb\n"
+    "%run 420_prep_RQ3_Dataframe.ipynb\n",
+    "%run 430_dataset_for_Kaggle.ipynb"
    ]
   },
   {
